# vectorlib

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md
examples/: example1.c  example2.c
include/: vectorlib.h
src/: vectorlib.c
tests/: CMakeLists.txt  benchmark.c  test_vector.c
